--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DirectionDemo</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="create_your_key">Create your key</string>
+    <string name="save">Save</string>
 </resources>
